# task-manager

./: .env_example  .gitignore  Makefile  README.md  docker-compose.db.yml  docker-compose.yml  examples.sql  pyproject.toml  requirements.txt  setup.cfg  todo.md
.github/workflows/: lint-test.yml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/locale/en/LC_MESSAGES/: django.po
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/statuses/: urls.py  views.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
task_manager/templates/: base.html  home.html
task_manager/users/: models.py  urls.py  views.py
