[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "App for managing of tasks"
authors = ["Ilia Kaziamov <ilya.kazyamov@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8.1"
Django = "^4.1.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
